--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,3 +1,9 @@
-<p>
-  about works!
-</p>
+<div class="container">
+  <div class="flex-item"> <!-- TODO:  Create main view bio-->
+    <h1>Bio</h1>
+    <p></p> <!-- TODO:  Create biography.  This will use an html content-->
+  </div>
+  <div class="flex-container"> <!-- TODO:  Create sidebar-->
+
+  </div>
+</div>
