added serivce, fixed data, fixed services

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="flex-item"> <!-- TODO:  Create main view bio-->
     <h1>Bio</h1>
-    <p></p> <!-- TODO:  Create biography.  This will use an html content-->
+    <p id="aboutLongDescription" class="appAbout"></p> <!-- TODO:  Create biography.  This will be injected-->
   </div>
   <div class="flex-container"> <!-- TODO:  Create sidebar-->
 
