uncommented the element check and chaged header to about

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="flex-item"> <!-- TODO:  Create main view bio-->
-    <h1>Bio</h1>
+    <h1>About</h1>
     <p id="aboutLongDescription" class="appAbout"></p> <!-- TODO:  Create biography.  This will be injected-->
   </div>
   <div class="flex-container"> <!-- TODO:  Create sidebar-->
