--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,4 +2,11 @@
     <p id="footerLeft" class="itemsLeft">
       <b>Justin L. Espiritu</b> | <a href="mailto:{{email}}">{{email}}</a>
     </p>
+    <p id="footerRight" class="itemsRight">
+      <span *ngFor="let s of social">
+        <a id="footerSocial{{s.title}}" title="{{s.title}}" class="socialMedia" href="{{s.url}}">
+          <i id="{{s.icon}}" aria-hidden="true"></i>
+        </a>
+      </span>
+    </p>
 </div>
