--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <app-navigation></app-navigation>
-<p>
-  home works!
-</p>
+<div class="container">
+  <h1>Home</h1>
+</div>
 <app-footer></app-footer>
