--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,7 @@
 <app-navigation></app-navigation>
 <div class="container">
-  <h1>Home</h1>
+  <div id="homeIntro">
+
+  </div>
 </div>
 <app-footer></app-footer>
