--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,9 @@
 <app-navigation></app-navigation>
 <div class="container">
   <div id="homeIntro">
-
+    <p>{{welcomeMsg}}</p>
+    <p>{{name}}</p>
+    <p>{{nickName}}</p>
   </div>
 </div>
 <app-footer></app-footer>
