--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -1,4 +1,28 @@
-.navigationContainerToolbar button,
-.navigationContainerToolbar a {
-  margin-right: 8px;
+
+// ****************************************************************************
+// Local styles
+// ****************************************************************************
+@import '../../../style-helpers/colors';
+@import '../../../style-helpers/fonts';
+@import '../../../style-helpers/viewportHelper';
+
+// ****************************************************************************
+// App Header
+// ****************************************************************************
+#navigationBar{
+  z-index: 1000 !important;
+  position: fixed;
+  // top: $toolbar--height !important;
+  top: 0;
+  left: 0px;
+  height: $navbar--height;
+  min-width: calc(100vw - #{$container--padding-right} - #{$container--padding-left}) !important;
+  padding-right: $container--padding-right;
+  padding-left: $container--padding-left;
+  background-color: $light-gray;
+  -webkit-box-shadow: 0px 4px 4px -2px rgba(0,0,0,0.18);
+  -moz-box-shadow: 0px 4px 4px -2px rgba(0,0,0,0.18);
+  box-shadow: 0px 4px 4px -2px rgba(0,0,0,0.18);
+  display: flex;
+  align-items: center;
 }
