--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,22 +1,13 @@
-<div id="footer" class="footer">
-    <!-- <p id="footerLeft" class="itemsLeft">
-      <b>Justin L. Espiritu</b> | <a href="mailto:{{email}}">{{email}}</a>
-    </p> -->
-
-    <!-- <p id="footerRight" class="itemsRight">
-      <span *ngFor="let s of social">
-        <a id="footerSocial{{s.title}}" title="{{s.title}}" class="socialMedia" href="{{s.url}}">
-          <i id="{{s.icon}}" aria-hidden="true"></i>
-        </a>
-      </span>
-    </p> -->
-    <mat-toolbar-row color="primary">
-      <a mat-flat-button href="mailto:{{email}}">Contact Me!</a>
-      <span class="spacer"></span>
-      <span *ngFor="let s of social">
-        <a [id]="s.title" [title]="s.title" [href]="s.url">
-          <i [class]="s.icon"></i>
-        </a>
-      </span>
-    </mat-toolbar-row>
-</div>
+<mat-toolbar id="footer" class="footer">
+  <mat-toolbar-row color="primary">
+    <a href="mailto:{{email}}">
+      <i class="fas fa-envelope"></i>
+    </a>
+    <span class="spacer"></span>
+    <span *ngFor="let s of social">
+      <a [id]="s.title" class="footerIcons" [title]="s.title" [href]="s.url">
+        <i [class]="s.icon"></i>
+      </a>
+    </span>
+  </mat-toolbar-row>
+</mat-toolbar>
