--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,8 @@
 <div id="footer" class="footerBar">
   <mat-toolbar-row>
     <a href="mailto:{{email}}">
-      <i class="fa fa-envelope footerIcons">
+      <i class="fa fa-envelope fa-2x footerIcons">
+        {{email}}
       </i>
     </a>
     <span class="spacer"></span>
