removed welcome message

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <app-navigation></app-navigation>
 <div class="container">
   <div id="homeIntro">
-    <p id="welcomeMsg">{{welcomeMsg}}</p>
+    <!-- <p id="welcomeMsg">{{welcomeMsg}}</p> -->
     <p id="name">{{name}}</p>
     <p id="title">{{title}}</p>
   </div>
