changed some more styling for dark.  Will insert theme change for future

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -4,6 +4,8 @@
         <span *ngFor="let item of desktopNavigationItemList">
             <a mat-button [routerLink]=item.route>{{item.title}}</a>
         </span>
+        <span class="spacer"></span>
+        <!-- TODO:  Insert Theme change -->
     </mat-toolbar-row>
 </mat-toolbar>
 
