--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <app-navigation></app-navigation>
-<div class="container">
+<div id="homeIntroContainer" class="container">
   <div id="homeIntro">
     <!-- <p id="welcomeMsg">{{welcomeMsg}}</p> -->
     <p id="name">{{name}}</p>
