--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -25,10 +25,13 @@
   box-shadow: 0px 4px 4px -2px rgba(0,0,0,0.18);
   display: flex;
   align-items: center;
-  background-color: map-get($primary, 700);
+  color: $dark-gray;
+  background-color: whitesmoke;
 }
 
 // //TODO: fix this.  I shouldn't have to color the button to avoid the hover
-// .mat-button{
-//   color: map-get($primary, white);
-// }
+.mat-button{
+  &:hover{
+    color: map-get($primary, 2);
+  }
+}
