added more styles

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,7 +1,7 @@
 <app-navigation></app-navigation>
-<div class="container">
-  <div id="aboutDetailsGroup" class="flex-item"> <!-- TODO:  Create main view bio-->
-    <p id="aboutLongDescription" class="appAbout">{{longDescription}}</p> <!-- TODO:  Create biography.  This will be injected-->
+<div class="container container--routing-about">
+  <div class="block--flex-parent"> <!-- TODO:  Create main view bio-->
+    <p class="block--flex-child">{{longDescription}}</p> <!-- TODO:  Create biography.  This will be injected-->
   </div>
 </div>
 <app-footer></app-footer>
