--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -5,16 +5,16 @@
 @import '../../../style-helpers/fonts';
 @import '../../../style-helpers/viewportHelper';
 
-.spacer {
+.footer--spacer {
   flex: 1 1 auto;
 }
 
-.footerIcons {
+.footer--link {
   margin: 8px;
   color: $dark-gray;
 }
 
-#footerBar{
+.container--footer{
   max-width: 100vw !important;
   padding-top: 15px;
   padding-bottom: 15px;
