--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -10,7 +10,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: stretch;
   color: $dark-gray;
   cursor: default;
 }
@@ -18,5 +17,17 @@
 .title--hover-green {
   &:hover{
     color: map-get($primary, 2);
+  }
+}
+
+.title--hover-red {
+  &:hover{
+    color: map-get($primary, 1);
+  }
+}
+
+.title--hover-yellow {
+  &:hover{
+    color: map-get($primary, 4);
   }
 }
