added color styling to nav

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -2,7 +2,7 @@
 <mat-toolbar *ngIf="!displayMobileView" class="container--routing-navigation">
     <mat-toolbar-row class="container--toolbar">
         <span *ngFor="let item of desktopNavigationItemList" class="toolbar--item">
-            <a mat-button [routerLink]=item.route>{{item.title}}</a>
+            <a mat-button [id]="item.id" [routerLink]=item.route>{{item.title}}</a>
         </span>
         <span class="navigation--spacer"></span>
         <!-- TODO:  Insert Theme change -->
