--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,8 @@
 <app-navigation></app-navigation>
 <div class="container container--routing-home">
     <!-- <p id="welcomeMsg">{{welcomeMsg}}</p> -->
-    <p>{{name}}</p>
-    <div class="container--title" *ngFor="let t of titles">
+    <h1 class="name--hover-underline">{{name}}</h1>
+    <div class="title--hover-grow" *ngFor="let t of titles">
       <span [class]="t.class">{{t.title}}</span>
     </div>
 </div>
