--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,6 +1,7 @@
 // ****************************************************************************
 // Local styles
 // ****************************************************************************
+@import '../../../style-helpers/animation';
 @import '../../../style-helpers/colors';
 @import '../../../style-helpers/fonts';
 @import '../../../style-helpers/viewportHelper';
@@ -15,19 +16,46 @@
 }
 
 .title--hover-green {
+  transition: $defaultTransition;
   &:hover {
     color: map-get($primary, 2);
   }
 }
 
 .title--hover-red {
+  transition: $defaultTransition;
   &:hover {
     color: map-get($primary, 1);
   }
 }
 
 .title--hover-yellow {
+  transition: $defaultTransition;
   &:hover {
     color: map-get($primary, 4);
+  }
+}
+
+.name--hover-underline {
+  position: relative;
+  text-decoration: none;
+  &:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: map-get($primary, 1);
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+  }
+  &:hover:before {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
   }
 }
