added more components and more info.  Trying to make the site a cleaner and more detailed.

--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -30,15 +30,30 @@
   background-color: whitesmoke;
 }
 
+// ****************************************************************************
+// Nav Animations
+// ****************************************************************************
 #button--nav-home {
-  &:hover{
+  &:hover {
     color: map-get($primary, 1);
   }
 }
 
 #button--nav-about {
-  &:hover{
+  &:hover {
     color: map-get($primary, 2);
+  }
+}
+
+#button--nav-portfolio {
+  &:hover {
+    color: map-get($primary, 3);
+  }
+}
+
+#button--nav-contact {
+  &:hover {
+    color: map-get($primary, 4);
   }
 }
 
