--- a/src/app/components/overview/overview.component.html
+++ b/src/app/components/overview/overview.component.html
@@ -1,1 +1,27 @@
-
+<div>
+  <img />
+  <div>
+    <ul class="no-bullets">
+      <li>
+        <i class="fas fa-address-card">
+          <span class="overview">{{name}}</span>
+        </i>
+      </li>
+      <li>
+        <i class="fas fa-home">
+          <span class="overview">{{location}}</span>
+        </i>
+      </li>
+      <li>
+        <i class="fas fa-envelope">
+          <a class="overview overview--email" href="mailto:{{email}}">{{email}}</a>
+        </i>
+      </li>
+      <li>
+        <i class="fas fa-briefcase">
+          <span class="overview">{{job}}</span>
+        </i>
+      </li>
+    </ul>
+  </div>
+</div>
