--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -1,3 +1,5 @@
-<p>
-  portfolio works!
-</p>
+<app-navigation></app-navigation>
+<div class="container container--routing-portfolio">
+  TODO:  Portfolio/resume
+</div>
+<app-footer></app-footer>
