--- a/src/app/components/overview/overview.component.html
+++ b/src/app/components/overview/overview.component.html
@@ -1,5 +1,5 @@
-<div>
-  <img />
+<div class="container container--overview">
+  <img [class]="profile.class" [src]="profile.src" [alt]="profile.alt" />
   <div>
     <ul class="no-bullets">
       <li>
@@ -19,7 +19,12 @@
       </li>
       <li>
         <i class="fas fa-briefcase">
-          <span class="overview">{{job}}</span>
+          <span class="overview">{{job.title}}</span>
+        </i>
+      </li>
+      <li>
+        <i class="fas fa-building">
+          <span class="overview">{{job.company}}</span>
         </i>
       </li>
     </ul>
