--- a/src/app/components/overview/overview.component.scss
+++ b/src/app/components/overview/overview.component.scss
@@ -9,10 +9,16 @@
 .overview {
   font-size: $font-size--normal;
   font-weight: $font-weight--normal;
+  display: inline-block;
   margin-left: 10px;
-  white-space: nowrap;
 }
 
 .overview--email {
   color: $dark-gray;
+}
+
+.overview--profile {
+  width: 75%;
+  height: auto;
+  border-radius: 4px;
 }
