--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,6 +26,14 @@ body {
 }
 
 // ****************************************************************************
+// Scrollbar
+// ****************************************************************************
+/* width */
+::-webkit-scrollbar {
+  width: 0 !important;
+}
+
+// ****************************************************************************
 // Global Hover Animations
 // ****************************************************************************
 
