simplified some styles

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,9 +1,7 @@
 <div class="container--footer">
   <mat-toolbar-row class="footer--toolbar">
     <a class="footer--link" href="mailto:{{email}}">
-      <i class="fa fa-envelope fa-2x element--hover-red">
-        <span> {{email}} </span>
-      </i>
+      <i class="fa fa-envelope fa-2x element--hover-red"></i>
     </a>
     <span class="footer--spacer"></span>
     <span *ngFor="let s of social">
