--- a/src/app/components/overview/overview.component.scss
+++ b/src/app/components/overview/overview.component.scss
@@ -15,6 +15,27 @@
 
 .overview--email {
   color: $dark-gray;
+  position: relative;
+  text-decoration: none;
+  &:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: $dark-gray;
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+  }
+  &:hover:before {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+  }
 }
 
 .overview--profile {
