--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -1,5 +1,10 @@
 <app-navigation></app-navigation>
 <div class="container container--routing-resume">
-  TODO:  Resume
+  <div>
+    TODO: insert button for download
+  </div>
+  <div>
+    TODO: insert html resume
+  </div>
 </div>
 <app-footer></app-footer>
