--- a/src/app/components/overview/overview.component.html
+++ b/src/app/components/overview/overview.component.html
@@ -1,7 +1,7 @@
 <div class="container container--overview">
   <img [class]="profile.class" [src]="profile.src" [alt]="profile.alt" />
   <div>
-    <ul class="no-bullets">
+    <ul class="no-bullets overview--list">
       <li>
         <i class="fas fa-address-card">
           <span class="overview">{{name}}</span>
