--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -18,6 +18,7 @@
   display: flex;
   flex-direction: column;
   &:first-child {
-    flex-grow: 1.25;
+    max-width: 70%;
+    border-right: 1px solid map-get($primary, 2);
   }
 }
