--- a/src/app/components/overview/overview.component.scss
+++ b/src/app/components/overview/overview.component.scss
@@ -9,8 +9,14 @@
 .overview {
   font-size: $font-size--normal;
   font-weight: $font-weight--normal;
+  text-align: left;
   display: inline-block;
   margin-left: 10px;
+  white-space: nowrap;
+}
+
+.overview--list {
+  padding: 0;
 }
 
 .overview--email {
