--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -19,6 +19,10 @@
   flex-direction: column;
   &:first-child {
     max-width: 70%;
-    border-right: 1px solid map-get($primary, 2);
+    border-right: 1px solid $dark-gray;
   }
+}
+
+.heading--title {
+  border-bottom: 1px solid $dark-gray;
 }
